# work-log

./: .env.example  .gitignore  README.md  THIRD_PARTY_LICENSES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
.github/workflows/: deploy-pages.yml  generate-review.yml  sync-daily.yml
daily/2026/: 2026-03-10.md
desktop/: app.js  index.html  styles.css
docs/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/work_log/: __init__.py  __main__.py  cli.py  config.py  gemini_client.py  generator.py  markdown_formatter.py  models.py  notion_client.py  notion_parser.py  openai_client.py  storage.py
templates/: achievement.md  daily.md  review.md  weekly.md
tests/: test_cli.py  test_generator.py  test_notion_parser.py
web/: App.jsx  main.jsx  styles.css
