[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "work-log"
version = "0.1.0"
description = "Sync Notion daily logs into Markdown and generate reviews with OpenAI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
work-log = "work_log.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
