[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "work-log"
version = "0.1.0"
description = "Notionの日報をMarkdownへ同期し、実績ログと自己評価ドラフトを生成するツール。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
work-log = "work_log.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
