[package]
name = "work-log-desktop"
version = "0.2.0"
description = "Personal work log desktop app"
authors = ["senri1101"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
